# mx

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: test.yml
_codeql_build_dir/tests/: mx_tests  mx_tests[1]_include.cmake  mx_tests[1]_tests.cmake
include/mx/: dcel.hpp  dyn_matrix.hpp  mx.hpp
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  dcel.test.cpp  dyn_matrix.test.cpp  mx.test.cpp  vector.test.cpp
